--- a/packages/http_firestore_redirect/pubspec.yaml
+++ b/packages/http_firestore_redirect/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.13.0 <3.0.0'
 
 dependencies:
   tekartik_http_redirect:
@@ -26,10 +26,23 @@ dependencies:
       ref: null_safety
       path: app_http
     version: '>=0.1.0'
+  tekartik_app_cv_firestore:
+    git:
+      url: git://github.com/tekartik/app_common_utils.dart
+      ref: null_safety
+      path: app_cv_firestore
+    version: '>=0.1.0'
 dev_dependencies:
   pedantic: ^1.10.0
   test: ^1.16.0
-
+  tekartik_http_redirect_test:
+    git:
+      url: git://github.com/tekartik/http_redirect.dart
+      path: packages/http_redirect_test
+      ref: null_safety
+    version: '>=0.0.1'
 dependency_overrides:
   tekartik_http_redirect:
     path: ../http_redirect
+  tekartik_http_redirect_test:
+    path: ../http_redirect_test
