--- a/packages/http_redirect_test/pubspec.yaml
+++ b/packages/http_redirect_test/pubspec.yaml
@@ -10,21 +10,21 @@ environment:
 dependencies:
   tekartik_http_redirect:
     git:
-      url: git://github.com/tekartik/http_redirect.dart
+      url: https://github.com/tekartik/http_redirect.dart
       path: packages/http_redirect
-      ref: null_safety
+      ref: dart2_3
     version: '>=0.0.1'
   tekartik_app_http:
     git:
-      url: git://github.com/tekartik/app_common_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/app_common_utils.dart
+      ref: dart2_3
       path: app_http
     version: '>=0.1.0'
   tekartik_http_test:
     git:
-      url: git://github.com/tekartik/http.dart
+      url: https://github.com/tekartik/http.dart
       path: http_test
-      ref: null_safety
+      ref: dart2_3
     version: '>=0.5.0'
 dev_dependencies:
   process_run:
