--- a/packages/http_firestore_redirect/pubspec.yaml
+++ b/packages/http_firestore_redirect/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
   sdk: '>=2.13.0 <3.0.0'
 
 dependencies:
+  http:
+  path:
+  cv:
   tekartik_http_redirect:
     git:
       url: https://github.com/tekartik/http_redirect.dart
