--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 dev_dependencies:
   test: '>=1.0.0'
   dev_test: '>=0.13.4-dev.1'
+  lints:
 
 dependency_overrides:
 #  tekartik_build_utils:
