--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
       url: https://github.com/tekartik/chrome_travis.dart
       ref: dart2_3
   process_run: '>=0.10.0'
-
+  path:
 dev_dependencies:
   test: '>=1.0.0'
   dev_test: '>=0.13.4-dev.1'
