--- a/packages/http_redirect/pubspec.yaml
+++ b/packages/http_redirect/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.8.0
 publish_to: none
 
 environment:
-  sdk: '>=2.12.0-259.15.beta <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   tekartik_http:
@@ -36,5 +36,4 @@ dev_dependencies:
   # build_node_compilers: ">=0.2.2"
   # build_web_compilers: ">=0.4.2"
   process_run: '>=0.12.0'
-
 
