--- a/packages/http_firestore_redirect/pubspec.yaml
+++ b/packages/http_firestore_redirect/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
       path: app_cv_firestore
     version: '>=0.1.0'
 dev_dependencies:
-  test: ^1.16.0
+  test: '>=1.16.0'
   tekartik_http_redirect_test:
     git:
       url: https://github.com/tekartik/http_redirect.dart
