--- a/packages/http_redirect_client_browser_test/pubspec.yaml
+++ b/packages/http_redirect_client_browser_test/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   http:
 
 dev_dependencies:
-  build_runner: ^2.1.4
-  build_web_compilers: ^3.2.1
-  lints: ^2.0.0
+  build_runner: '>=2.1.4'
+  build_web_compilers: '>=3.2.1'
+  lints: '>=2.0.0'
 
