--- a/packages/http_redirect_test/pubspec.yaml
+++ b/packages/http_redirect_test/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   path:
 dev_dependencies:
   process_run:
-  test: ^1.16.0
+  test: '>=1.16.0'
 
 dependency_overrides:
   tekartik_http_redirect:
