--- a/packages/http_firestore_redirect/pubspec.yaml
+++ b/packages/http_firestore_redirect/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   http:
@@ -15,24 +15,24 @@ dependencies:
     git:
       url: https://github.com/tekartik/http_redirect.dart
       path: packages/http_redirect
-      ref: dart2_3
+      ref: dart3a
     version: '>=0.0.1'
   tekartik_firebase_firestore_sembast:
     git:
       url: https://github.com/tekartik/firebase_firestore.dart
       path: firestore_sembast
-      ref: dart2_3
+      ref: dart3a
     version: '>=0.8.0'
   tekartik_app_http:
     git:
       url: https://github.com/tekartik/app_common_utils.dart
-      ref: dart2_3
+      ref: dart3a
       path: app_http
     version: '>=0.1.0'
   tekartik_app_cv_firestore:
     git:
       url: https://github.com/tekartik/app_common_utils.dart
-      ref: dart2_3
+      ref: dart3a
       path: app_cv_firestore
     version: '>=0.1.0'
 dev_dependencies:
@@ -41,7 +41,7 @@ dev_dependencies:
     git:
       url: https://github.com/tekartik/http_redirect.dart
       path: packages/http_redirect_test
-      ref: dart2_3
+      ref: dart3a
     version: '>=0.0.1'
 dependency_overrides:
   tekartik_http_redirect:
