--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
 dev_dependencies:
   test: '>=1.0.0'
   dev_test: '>=0.13.4-dev.1'
-  lints:
+  lints: '>=2.0.0'
 
 dependency_overrides:
 #  tekartik_build_utils:
