--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   path:
 dev_dependencies:
   test: '>=1.0.0'
-  dev_test: '>=0.13.4-dev.1'
+  dev_build: '>=0.13.4-dev.1'
   lints: '>=2.0.0'
 
 dependency_overrides:
