--- a/packages/http_redirect_client_browser_test/pubspec.yaml
+++ b/packages/http_redirect_client_browser_test/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk; '>=3.4.0-0 <4.0.0'
+  sdk: '>=3.4.0-0 <4.0.0'
 
 dependencies:
   tekartik_test_menu_browser:
