--- a/packages/http_redirect/pubspec.yaml
+++ b/packages/http_redirect/pubspec.yaml
@@ -36,4 +36,5 @@ dev_dependencies:
   # build_node_compilers: ">=0.2.2"
   # build_web_compilers: ">=0.4.2"
   process_run: '>=0.12.0'
+resolution: workspace
 
