--- a/packages/http_firestore_redirect/pubspec.yaml
+++ b/packages/http_firestore_redirect/pubspec.yaml
@@ -5,12 +5,12 @@ publish_to: none
 # homepage: https://www.example.com
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.7.0
 
 dependencies:
   http:
-  path:
-  cv:
+  path: ">=1.9.0"
+  cv: ">=1.1.0+4"
   tekartik_http_redirect:
     git:
       url: https://github.com/tekartik/http_redirect.dart
@@ -36,7 +36,7 @@ dependencies:
       path: app_cv_firestore
     version: '>=0.1.0'
 dev_dependencies:
-  test: '>=1.16.0'
+  test: ">=1.24.0"
   tekartik_http_redirect_test:
     git:
       url: https://github.com/tekartik/http_redirect.dart
