--- a/packages/http_redirect/pubspec.yaml
+++ b/packages/http_redirect/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.8.0
 publish_to: none
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.7.0
 
 dependencies:
   tekartik_http:
@@ -23,18 +23,18 @@ dependencies:
     git:
       url: https://github.com/tekartik/common_utils.dart
       ref: dart3a
-  args: '>=2.0.0'
+  args: ">=2.6.0"
   http:
-  path:
+  path: ">=1.9.0"
   async:
 
 
 dev_dependencies:
-  dev_test: '>=0.15.0'
-  test: '>=1.16.0'
+  dev_test: ">=1.0.0+4"
+  test: ">=1.24.0"
   build_test:
   # build_node_compilers: ">=0.2.2"
   # build_web_compilers: ">=0.4.2"
-  process_run: '>=0.12.0'
+  process_run: ">=1.2.1+1"
 resolution: workspace
 
