--- a/packages/http_redirect_client_browser_test/pubspec.yaml
+++ b/packages/http_redirect_client_browser_test/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.7.0
 
 dependencies:
   tekartik_test_menu_browser:
@@ -18,8 +18,8 @@ dependencies:
   http:
 
 dev_dependencies:
-  build_runner: '>=2.1.4'
-  build_web_compilers: '>=3.2.1'
-  lints: '>=2.0.0'
+  build_runner: ">=2.4.13"
+  build_web_compilers: ">=4.0.11"
+  lints: ">=5.0.0"
 resolution: workspace
 
