--- a/packages/http_redirect_test/pubspec.yaml
+++ b/packages/http_redirect_test/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 # homepage: https://www.example.com
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.7.0
 
 dependencies:
   tekartik_http_redirect:
@@ -27,9 +27,9 @@ dependencies:
       ref: dart3a
     version: '>=0.5.0'
   http:
-  path:
+  path: ">=1.9.0"
 dev_dependencies:
-  process_run:
-  test: '>=1.16.0'
+  process_run: ">=1.2.1+1"
+  test: ">=1.24.0"
 
 resolution: workspace
